fix some sonar suggestions